feat add update and delete user endpoints
