# src/routes/user.routes.ts
@@ -1,6 +1,12 @@
 import { Router, Request, Response } from "express";
-import { createUser, getAllUsers } from "../services/userService";
+import {
+  createUser,
+  deleteUser,
+  getAllUsers,
+  updateUser,
+} from "../services/userService";
 import { CreateUserDto } from "../dtos/createUserDto";
+import { UpdateUserDto } from "../dtos/updateUserDto";
 
 const router = Router();
 
@@ -22,6 +28,43 @@ router.post("/user", async (req: Request, res: Response) => {
   } catch (error: any) {
     console.error("Error while adding user:", error);
     res.status(409).send(error.message);
+  }
+});
+
+//Update user con id en el body :)
+// router.put("/user", async (req: Request, res: Response) => {
+//   try {
+//     //const params =
+//     const userDto: UpdateUserDto = req.body;
+//     console.log("Id de usuario:" + userDto.id);
+//     const updatedUser = await updateUser(userDto);
+//     res.status(200).send(updatedUser);
+//   } catch (error: any) {
+//     console.error("Error while updating user:", error);
+//     res.status(500).send(error.message);
+//   }
+// });
+
+router.put("/user/:id", async (req: Request, res: Response) => {
+  try {
+    const params = req.params.id;
+    const userDto: UpdateUserDto = req.body;
+    const updatedUser = await updateUser(params, userDto);
+    res.status(200).send(updatedUser);
+  } catch (error: any) {
+    console.error("Error while updating user:", error);
+    res.status(500).send(error.message);
+  }
+});
+
+router.delete("/user/:id", async (req: Request, res: Response) => {
+  try {
+    const params = req.params.id;
+    await deleteUser(params);
+    res.status(204);
+  } catch (error: any) {
+    console.error("Error while deleting user:", error);
+    res.status(500).send(error.message);
   }
 });
 
